Danmaqua: Add database & Fix model & Add drawer list ui
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+
     <string name="app_name">FloatingCaption</string>
+
+    <string name="action_connect">Connect</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="action_add_streamer">Add streamer…</string>
+
 </resources>
