--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
 
     <string name="action_new_subscription">Subscribe streamer…</string>
 
+    <string name="no_streamer_selected_title">No streamer selected</string>
+    <string name="status_disconnected">Disconnected</string>
+    <string name="status_connected_with_popularity">Online. Popularity: %d</string>
+
     <string name="new_subscription_title">New subscription</string>
     <string name="room_id_edit_hint">Enter Room ID here…</string>
     <string name="action_subscribe">Subscribe</string>
@@ -16,7 +20,7 @@
     <string name="noti_channel_status">Status notification</string>
 
     <string name="listener_service_label">Danmaku Background Service</string>
-    <string name="listener_service_noti_title">Danmaqua is listening danmaku for you.</string>
+    <string name="listener_service_noti_title">Danmaqua is listening messages for you.</string>
     <string name="listener_service_noti_text_no_connected">No room entered. Click here to open main page.</string>
     <string name="listener_service_noti_text_connected">Connected room: %1$s(%2$d)</string>
     <string name="listener_service_noti_stop">Stop</string>
