--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,12 @@
     <string name="listener_service_noti_text_connected">Connected room: %1$s(%2$d)</string>
     <string name="listener_service_noti_stop">Stop</string>
 
+    <string name="settings_title">Settings</string>
+
+    <string name="filter_settings_title">Filter</string>
+    <string name="filter_settings_enabled_title">Show filtered danmaku only</string>
+    <string name="filter_settings_enabled_summary">Help you easier to read translation</string>
+    <string name="filter_settings_pattern_title">Filter Pattern</string>
+    <string name="filter_settings_pattern_summary_format">Translation danmaku will be filtered with this pattern: %s</string>
+
 </resources>
