MainActivity: Use normal direction layout
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="action_open_a_floating_window">Open a floating window</string>
     <string name="action_open_stream">Watch stream</string>
     <string name="action_room_info">Room info</string>
-    <string name="action_back_to_top">Back to top</string>
+    <string name="action_back_to_latest">Back to latest</string>
 
     <string name="sys_msg_connected_to_room"><![CDATA[
     <b>Connected to room:</b> %d
