--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,19 @@
     <string name="listener_service_noti_text_connected">Connected room: %1$s(%2$d)</string>
     <string name="listener_service_noti_stop">Stop</string>
 
+    <string name="room_info_title">Room Info</string>
+    <string name="room_info_loading_text">Getting info…</string>
+    <string name="room_info_room_title">Room title</string>
+    <string name="room_info_user_name_and_id">Streamer ID</string>
+    <string name="room_info_room_id">Room ID</string>
+    <string name="room_info_area">Area</string>
+    <string name="room_info_live_status">Live status</string>
+    <string name="room_info_copy_url">Copy Page URL</string>
+
+    <string name="live_status_closed">Closed</string>
+    <string name="live_status_active">Live</string>
+    <string name="live_status_carousel">Carousel</string>
+
     <string name="overlay_permission_request_title">Overlay permission required</string>
     <string name="overlay_permission_request_message"><![CDATA[
     To show a floating window, overlay permission is required.
