--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,12 +93,34 @@
     <string name="filter_settings_enabled_summary">Help you easier to read translation</string>
     <string name="filter_settings_pattern_title">Filter Pattern</string>
     <string name="filter_settings_pattern_summary_format"><![CDATA[
-    Translation danmaku will be filtered with this pattern: %s
+    Translation/caption danmaku will be filtered with this pattern: %s
     ]]></string>
     <string name="filter_settings_blocked_users_title">Blocked users</string>
     <string name="filter_settings_blocked_users_summary_format"><![CDATA[
     Danmaku sent by blocked users will not be displayed whether filter is on or off.
     ]]></string>
+
+    <string name="filter_settings_invalid_pattern_title">Invalid Pattern</string>
+    <string name="filter_settings_invalid_pattern_message"><![CDATA[
+    Your regexp pattern is invalid. Here is report log:
+    ]]></string>
+    <string name="action_what_is_regexp">What is regexp?</string>
+    <string name="what_is_regexp_tutorial_url"><![CDATA[
+    https://www.runoob.com/regexp/regexp-tutorial.html
+    ]]></string>
+    <string name="filter_settings_test_pattern_title">Test pattern</string>
+    <string name="filter_settings_test_pattern_summary"><![CDATA[
+    Test if pattern will be able to filter translation/caption danmaku
+    ]]></string>
+
+    <string name="test_pattern_dialog_title">Pattern Test</string>
+    <string name="test_pattern_dialog_regexp">Regular expression (Pattern)</string>
+    <string name="test_pattern_dialog_sample_text">Sample text</string>
+    <string name="test_pattern_dialog_status">Match result</string>
+    <string name="test_pattern_dialog_status_invalid_pattern">Invalid pattern</string>
+    <string name="test_pattern_dialog_status_no_matches">No matches</string>
+    <string name="test_pattern_dialog_status_matched">Matched %1$s → %2$s</string>
+    <string name="action_go_to_regexr_com">Test on regexr.com</string>
 
     <string name="floating_settings_title">Floating window</string>
     <string name="floating_two_line_title">Two-line mode</string>
