Settings: Fix & Add Icons
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,9 @@
     <string name="settings_title">Settings</string>
 
     <string name="filter_settings_title">Filter</string>
+    <string name="filter_settings_summary"><![CDATA[
+    Show filtered danmaku only, filter pattern, test pattern, blocked users and text.
+    ]]></string>
     <string name="filter_settings_enabled_title">Show filtered danmaku only</string>
     <string name="filter_settings_enabled_summary">Help you easier to read translation</string>
     <string name="filter_settings_pattern_title">Filter Pattern</string>
