--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">FloatingCaption</string>
+    <string name="app_name">FloatingSubtitle</string>
 
     <string name="action_connect">Connect</string>
     <string name="action_disconnect">Stop</string>
@@ -127,7 +127,7 @@
     <string name="filter_settings_enabled_summary">Help you to read translation easily</string>
     <string name="filter_settings_pattern_title">Filter Pattern</string>
     <string name="filter_settings_pattern_summary_format"><![CDATA[
-    Translation/caption danmaku will be filtered with this pattern: %s
+    Translation/subtitle danmaku will be filtered with this pattern: %s
     ]]></string>
     <string name="filter_settings_blocked_users_title">Blocked users</string>
     <string name="filter_settings_blocked_users_summary_format"><![CDATA[
@@ -149,7 +149,7 @@
     ]]></string>
     <string name="filter_settings_test_pattern_title">Test pattern</string>
     <string name="filter_settings_test_pattern_summary"><![CDATA[
-    Test if pattern will be able to filter translation/caption danmaku
+    Test if pattern will be able to filter translation/subtitle danmaku
     ]]></string>
 
     <string name="test_pattern_dialog_title">Pattern Test</string>
@@ -182,12 +182,12 @@
     Two-line mode, background transparency, text size
     ]]></string>
     <string name="floating_two_line_title">Two-line mode</string>
-    <string name="floating_two_line_summary">Show two-line caption instead</string>
+    <string name="floating_two_line_summary">Show two-line subtitles instead</string>
     <string name="floating_background_alpha_title">Background transparency</string>
     <string name="floating_background_alpha_summary"><![CDATA[
     Range: 100–255. The maximum value means opaque.
     ]]></string>
-    <string name="floating_text_size_title">Caption text size</string>
+    <string name="floating_text_size_title">Subtitle text size</string>
     <string name="floating_text_size_summary">Unit: sp</string>
 
     <string name="about_title">About</string>
@@ -276,16 +276,16 @@
 
     <string name="intro_konaqua" translatable="false">こんあくあーー</string>
     <string name="intro_allow_collect_data"><![CDATA[
-    3.Allow FloatingCaption to <b>collect and upload anonymous data</b>
+    3.Allow FloatingSubtitle to <b>collect and upload anonymous data</b>
     such as in-app usage and crash logs so that we can improve its experience better. (Optional)
     ]]></string>
     <string name="intro_allow_internet_access"><![CDATA[
-    1.Allow <b>Internet permissions</b> for FloatingCaption to access Bilibili API.
+    1.Allow <b>Internet permissions</b> for FloatingSubtitle to access Bilibili API.
     <b>(Required)</b>
     ]]></string>
     <string name="intro_allow_background_service"><![CDATA[
-    2.Allow FloatingCaption to <b>run a background service</b> while user
-    is watching live danmaku/caption. <b>(Required)</b>
+    2.Allow FloatingSubtitle to <b>run a background service</b> while user
+    is watching live danmaku/subtitle. <b>(Required)</b>
     ]]></string>
     <string name="intro_start_button">Start</string>
     <string name="intro_collect_data_disabled_title">Disabled Analytics SDK</string>
