--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,7 +179,7 @@
 
     <string name="floating_settings_title">Floating window</string>
     <string name="floating_settings_summary"><![CDATA[
-    Two-line mode, background transparency, text size
+    Two-line mode, simplify move gesture, background transparency, text size
     ]]></string>
     <string name="floating_two_line_title">Two-line mode</string>
     <string name="floating_two_line_summary">Show two-line subtitles instead</string>
@@ -310,6 +310,11 @@
     <string name="cannot_find_vtuber_in_catalog">Cannot find VTubers in catalog?</string>
     <string name="cannot_find_vtuber_in_catalog_url" translatable="false"><![CDATA[
     https://github.com/danmaqua/danmaqua-data/blob/master/README.md#增加更新虚拟主播目录
+    ]]></string>
+
+    <string name="floating_touch_to_move_title">Simplify move gesture</string>
+    <string name="floating_touch_to_move_summary"><![CDATA[
+    Touch to start moving instead of long press
     ]]></string>
 
 </resources>
