Notification: Fix & Show reconnect & Avatar load
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -332,4 +332,9 @@
     No subscriptions. Please subscribe streamer from main drawer first.
     ]]></string>
 
+    <string name="listener_service_noti_disconnected_text_format"><![CDATA[
+    Disconnected from room: %1$s(%2$d). Click here to open main page.
+    ]]></string>
+    <string name="listener_service_noti_reconnect">Reconnect</string>
+
 </resources>
